--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "require": {
         "php": ">= 8.0",
-        "enjoys/forms": "^5.0"
+        "enjoys/forms": "^5.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -26,7 +26,7 @@
         "tests": "./vendor/bin/phpunit",
         "infection": [
             "Composer\\Config::disableProcessTimeout",
-            "XDEBUG_MODE=coverage ./vendor/bin/infection --logger-html='mutation-report.html'"
+            "XDEBUG_MODE=coverage ./vendor/bin/infection --threads=4 --logger-html='mutation-report.html'"
         ]
     }
 }
