--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "require": {
         "php": ">= 8.0",
-        "enjoys/forms": "^5.4"
+        "enjoys/forms": "^5.4.1-rc1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
