--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "require": {
         "php": ">= 8.0",
-        "enjoys/forms": "^5.4.1"
+        "enjoys/forms": "^5.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -28,5 +28,10 @@
             "Composer\\Config::disableProcessTimeout",
             "XDEBUG_MODE=coverage ./vendor/bin/infection --threads=4 --logger-html='mutation-report.html'"
         ]
+    },
+    "config": {
+        "allow-plugins": {
+            "infection/extension-installer": true
+        }
     }
 }
